--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.11"
 services:
   litellm:
     build:
@@ -12,13 +13,15 @@ services:
     # command:
     #  - "--config=/app/config.yaml"
     ##############################################
-    ports:
-      - "4000:4000" # Map the container port to the host, change the host port if necessary
+    expose:
+      - 4000 # Map the container port to the host, change the host port if necessary
+    networks:
+      - npm_network
     environment:
-      DATABASE_URL: "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
+      DATABASE_URL: "postgresql://llmproxy:k6NL28eWEjT0QPRc5IoCBQ5d5K0G7fK@db:5432/litellm"
       STORE_MODEL_IN_DB: "True" # allows adding models to proxy via UI
     env_file:
-      - .env # Load local .env file
+      - stack.env # Load local .env file
     depends_on:
       - db  # Indicates that this service depends on the 'db' service, ensuring 'db' starts first
     healthcheck:  # Defines the health check configuration for the container
@@ -35,9 +38,11 @@ services:
     environment:
       POSTGRES_DB: litellm
       POSTGRES_USER: llmproxy
-      POSTGRES_PASSWORD: dbpassword9090
-    ports:
-      - "5432:5432"
+      POSTGRES_PASSWORD: k6NL28eWEjT0QPRc5IoCBQ5d5K0G7fK
+    expose:
+      - 5432
+    networks:
+      - npm_network
     volumes:
       - postgres_data:/var/lib/postgresql/data # Persists Postgres data across container restarts
     healthcheck:
@@ -51,16 +56,22 @@ services:
     volumes:
       - prometheus_data:/prometheus
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
+    expose:
+      - 9090
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
-      - "--storage.tsdb.retention.time=15d"
+      - "--storage.tsdb.retention.time=45d"
     restart: always
+    networks:
+      - npm_network
 
 volumes:
   prometheus_data:
     driver: local
   postgres_data:
     name: litellm_postgres_data # Named volume for Postgres data persistence
+
+networks:
+  npm_network:
+    external: true
